--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 /* General */
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 * {
     margin : 0;
     padding : 0;
@@ -7,6 +10,81 @@
 }
 
 body {
-    font-family: "Poppins", sans-serif;
+    font-family: "Poppins", sans-serif; 
 
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+p{
+    color: rgb(85,85,85);
+
+}
+
+/* Transition */
+
+a, .btn {
+    transition: all 0.5s ease;
+}
+
+nav, .nav-links{
+    display : flex;
+}
+
+nav {
+    justify-content: space-around;
+    align-items: center;
+    height: 17vh;
+
+}
+
+.nav-links {
+    list-style: none;
+    gap: 2rem;
+    font-size: 1.5rem;
+
+}
+
+a{
+    text-decoration: none;
+    color: black;
+    text-decoration-color:white;
+
+}
+
+a:hover {
+    color: grey;
+    text-decoration:underline;
+    text-underline-offset: 1rem;
+    text-decoration-color : rgb(181,181,181);
+
+}
+
+.logo {
+    font-size: 2rem;
+}
+
+.logo:hover {
+    cursor:default
+}
+
+/* HAMBORGEORRRRRRRRRRR */
+#hamburger-nav {
+    display: none;
+}
+
+.hamburger-menue{
+    position: relative;
+    display: inline-block;
+}
+
+.hamburger-icon{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 24px;
+    width: 30px;
+    cursor:pointer;
 }
