--- a/style.css
+++ b/style.css
@@ -88,3 +88,26 @@ a:hover {
     width: 30px;
     cursor:pointer;
 }
+
+.menu-links {
+    list-style : none;
+}
+
+.hamburger-icon span { 
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    transition : all 0.3s ease-in-out;
+
+}
+
+.menu-links { 
+    position : absolute;
+    top: 100%;
+    right: 0;
+    background-color : white;
+    width: fit-content;
+    max-height : 0;
+    overflow : hidden;
+    transition : all 0.3s ease-in-out;
+}
